syntax = "proto3";
package idl;
option go_package = "./";

service PublishService {
  rpc PublishVideo(PublishVideoReq) returns(PublishVideoResp);   // 视频投稿
  rpc GetVideoListByUserId(GetVideoListByUserIdReq) returns(GetVideoListByUserIdResp);  // 查询用户视频列表
}

message VideoInfo {
  int64 id = 1; // 视频唯一标识
  UserInfo author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}

message UserInfo {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  optional int64 follow_count = 3; // 关注总数
  optional int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  optional string avatar = 6; //用户头像
  optional string background_image = 7; //用户个人页顶部大图
  optional string signature = 8; //个人简介
  optional int64 total_favorited = 9; //获赞数量
  optional int64 work_count = 10; //作品数量
  optional int64 favorite_count = 11; //点赞数量
}

message PublishVideoReq { 
  int64 user_id = 1;
  bytes data = 2;
  string title = 3;
  string fileName = 4;
}

message PublishVideoResp {
  int64 status_code = 1;
  string status_msg = 2;
}

message GetVideoListByUserIdReq {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message GetVideoListByUserIdResp {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated VideoInfo video_list = 3; // 用户发布的视频列表
}